shared-helpers/src/styles/app-css.scss
html {
  @apply antialiased;
}

body {
  @apply font-sans;
  @apply bg-white;
  @apply text-gray-900;
}

.-top {
  top: -0.8rem;
}

main {
}

.site-wrapper {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

.site-content {
  flex: 1;
  display: flex;
  flex-direction: column;

  main {
    flex: 1;
    display: flex;
    flex-direction: column;

    > section {
      flex: 1;
    }
  }
}

.site-content--wide-content {
  .navbar,
  .page-header__group {
    @apply max-w-screen-xl;
  }
}

.site-banner-container {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.site-alert-banner-content {
  padding-inline: 3rem;
  padding-block: 1rem;
  width: 100%;
}

@import "mixins.scss";
@import "headers.scss";
@import "custom_counter.scss";
@import "forms.scss";
@import "tables.scss";
@import "homepage.scss";
@import "print.scss";
@import "ag_grid.scss";

